[gd_scene load_steps=12 format=3 uid="uid://dwuanahrtcnja"]

[ext_resource type="Script" uid="uid://geoqk64hmvya" path="res://Scenes/ui/character_selector.gd" id="1_bc0im"]
[ext_resource type="Resource" uid="uid://b1td0cjrcotse" path="res://Scenes/run/run_startup.tres" id="2_ul8t5"]
[ext_resource type="Texture2D" uid="uid://c7mh2o1muhqdo" path="res://assets/Kudaman illustration .png" id="3_3mm8h"]
[ext_resource type="Texture2D" uid="uid://cqcal03735mv8" path="res://global/art/tile_0118.png" id="3_nimb7"]
[ext_resource type="Texture2D" uid="uid://c1gvqgvgs3xc8" path="res://global/art/tile_0131.png" id="4_47yup"]
[ext_resource type="Texture2D" uid="uid://bfvi02kojsa00" path="res://global/art/tile_0103.png" id="5_8nm6r"]

[sub_resource type="Gradient" id="Gradient_rhbk3"]
colors = PackedColorArray(0.446234, 0.268385, 0.00307705, 1, 0.0792166, 0.0638075, 0.0184792, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2eixa"]
gradient = SubResource("Gradient_rhbk3")

[sub_resource type="LabelSettings" id="LabelSettings_qdwj4"]
line_spacing = 10.0
font_size = 10
font_color = Color(1, 0.678431, 0.270588, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_htbvm"]
line_spacing = 2.0
font_size = 6
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_q01gr"]

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bc0im")
run_startup = ExtResource("2_ul8t5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="CharacterPortrait" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
offset_top = 40.0
offset_right = 218.0
offset_bottom = 144.0
texture = ExtResource("3_3mm8h")
expand_mode = 1

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_2eixa")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="CharacterText" type="VBoxContainer" parent="CanvasLayer2"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.0
offset_top = 1.0
offset_right = 50.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_constants/separation = 3

[node name="Title" type="Label" parent="CanvasLayer2/CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "Kudaman"
label_settings = SubResource("LabelSettings_qdwj4")
vertical_alignment = 1

[node name="Description" type="Label" parent="CanvasLayer2/CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "Likes to slice things up
Second line of text
Third line of text"
label_settings = SubResource("LabelSettings_htbvm")
vertical_alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer2"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -26.0
offset_right = -3.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
text = "Start"

[node name="CharacterButtons" type="VBoxContainer" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 95.0
offset_top = -61.0
offset_right = 125.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="KudamanButton" type="Button" parent="CanvasLayer2/CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_q01gr")

[node name="Icon" type="TextureRect" parent="CanvasLayer2/CharacterButtons/KudamanButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nimb7")
expand_mode = 1
stretch_mode = 5

[node name="DatuPutiButton" type="Button" parent="CanvasLayer2/CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_q01gr")

[node name="Icon" type="TextureRect" parent="CanvasLayer2/CharacterButtons/DatuPutiButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_47yup")
expand_mode = 1
stretch_mode = 5

[node name="BrothersButton" type="Button" parent="CanvasLayer2/CharacterButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_q01gr")

[node name="Icon" type="TextureRect" parent="CanvasLayer2/CharacterButtons/BrothersButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8nm6r")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="CanvasLayer2/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/CharacterButtons/KudamanButton" to="." method="_on_kudaman_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/CharacterButtons/DatuPutiButton" to="." method="_on_datu_puti_button_pressed"]
[connection signal="pressed" from="CanvasLayer2/CharacterButtons/BrothersButton" to="." method="_on_brothers_button_pressed"]
